--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TiendaAbarrotes
 excludes=
 file.reference.mysql-connector-java-5.1.49.jar=J:\\Descargas\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
+file.reference.mysql-connector-java-8.0.27.jar=MySqlJdbcDriver\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
